Enhancements and fixes (#87)
* Comply with RFC2822 for Message-Id" format.

* Provide ability to dynamically change log level via commands in the
console or remote command app.

* Rename IOPUtilOld to IOUtil

* Support log override static accessor

* Remove extra logging

* Start of a StringUtil class

* Parameterised string parsing
Provide a helper method to parse a string containing parameters and
replace them with associated parameter values

* Unit test for ParamterParser

* Add property setter method

* Set the base directory as a property for easier access

* Add replacing %home%

* Use putAll instead of replacing with a map.

* Correct message strings.

* Remove unused imports

* Fix deprecated Long invocation

* Remove unused import

* Remove unused import

* Remove unused import

* Remove unused imports

* Declare serialisable long id

* Remove unused imports

* Changes to support more re-usable healthcheck and add unit test

* Rationalise the HTTP response to use a common method

* Resources for single server test

* Add getFileOutputStream helper method

* Add getActiveModulesByClass helper method

* Provide access to session object

* Add helper method to get resources for a group

* Add getActiveModulesByClass helper method

* Fix muddled logic.

* Cleanup unused code

* Fix logic

* Use correct parameter accessor

* SingleServer unit test resource

* Rationalise the support for message/disposition-notification

* Add HTTP_USER_AGENT static for key to override property.

* Add HTTP_UER_AGENT accessor for property based override

* Change accessor name for User-Agent

* Rationalise processing to centralise sending MDN (sync and async) to a
single class

* Allow user configuration of the HTTP "User-Agent" header.

* Formatting

* Change to non-deprecated mechanism to use a standard line seprator

* Use Java standard method for system dependent line separator

* Remov